commit tree e6ba7915850728507041b5f454dfe4189dfdcc10

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 #dodger {
-  background-color: white;
+  background-color:pink;
   height: 20px;
-  position: absolute;
+  position: "100px";
   width: 40px;
 }
 
